[gd_scene load_steps=2 format=3 uid="uid://cvnmlou1030dy"]

[ext_resource type="Script" path="res://scripts/pause.gd" id="1_nheny"]

[node name="CanvasLayer" type="CanvasLayer"]
layer = 8

[node name="PanelContainer" type="PanelContainer" parent="."]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nheny")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "PAUSE"

[node name="Resume" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "RESUME"

[node name="Retry" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "RETRY"

[node name="Main menu" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "MAIN MENU"

[node name="Exit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "EXIT"

[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/Resume" to="PanelContainer" method="_on_resume_button_up"]
[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/Retry" to="PanelContainer" method="_on_retry_button_up"]
[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/Main menu" to="PanelContainer" method="_on_main_menu_button_up"]
[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/Exit" to="PanelContainer" method="_on_exit_button_up"]
